# gyy_blockchain

./: CMakeLists.txt
ca/: CMakeLists.txt  main.cpp
ca/config/: ca_config.ini
ca/identity_service/: identity_service.cpp  identity_service.h
consen_node/: CMakeLists.txt  main.cpp
consen_node/config/: config.ini
consen_node/global/: global.cpp  global.h
consen_node/init/: consen_node_cache.cpp  consen_node_cache.h  consen_node_identity.cpp  consen_node_identity.h
consen_node/raft/: raft.cpp  raft.h  raft_service.cpp  raft_sevice.h
proto/: block.proto  builtin_service.proto  consen_node.proto  identity.proto  store_node.proto
store_node/: CMakeLists.txt  main.cpp  test.h
store_node/config/: config.ini
store_node/global/: global.cpp  global.h
store_node/gossip/: gossip.cpp  gossip.h  gossip_service.cpp  gossip_service.h
store_node/init/: statusdb.cpp  statusdb.h  store_node_identity.cpp  store_node_identity.h
store_node/smart_contract/: base_contract.h  submit_contract.cpp  submit_contract.h  trace_contract.h
utils/: CMakeLists.txt
utils/encode/: encode.cpp  encode.h
utils/gini/: gini.cpp  gini.h
utils/grena/: grena.cpp  grena.h
utils/secure/: md5.cpp  md5.h  rsa.cpp  rsa.h  signature.cpp  signature.h
